--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <big><big><b><i><a target="_blank" href="contact_me.html">Contact me</a></i></b></big></big>
     <hr>
     <p>Check out this board game I made!</p>
-    <video width="560" height="315" src="finalvideo.mp4" controls autoplay allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">Upshot game</video>
+    <video width="560" height="315" src="video.mp4" controls autoplay allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">Upshot game</video>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/9uOMectkCCs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <br>
   <hr>
