--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <br>
     <big><big><b><i><a target="_blank" href="contact_me.html">Contact me</a></i></b></big></big>
     <hr>
+    <b><i><a target="_blank" href="keysnatch.html">Key Snatch Game</a></i></b>
+    <hr>
     <p>Check out this board game I made!</p>
     <video width="560" height="315" src="final.mp4" controls autoplay allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">Upshot game</video>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/9uOMectkCCs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
