--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <br>
     <big><big><b><i><a target="_blank" href="contact_me.html">Contact me</a></i></b></big></big>
     <hr>
-    <b><i><a target="_blank" href="keysnatch.html">Key Snatch Game</a></i></b>
+    <iframe src="https://scratch.mit.edu/projects/476723405/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <hr>
     <p>Check out this board game I made!</p>
     <video width="560" height="315" src="final.mp4" controls autoplay allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">Upshot game</video>
