--- a/contact_me.html
+++ b/contact_me.html
@@ -5,9 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact me</title>
 </head>
+<link type="text/css" rel="stylesheet" href="/main2.css">
 <body>
-    <center><b><i><a target="_blank" href="https://www.linkedin.com/in/gehna-goel-3a42521b1/">Contact me on Linkedin!</a></i></b>
+    <br> 
     <br>
-    <b><i><a target="_blank" href="https://www.behance.net/gehnagoel">Check out my Behance Account!</a></i></b></center>
+    <br>
+    <center>
+    <div class="cards_">
+        <img src="link.png" alt="linkedin" style="width:100%">
+        <div class="container">
+            <big><big><b><i><a target="_blank" href="https://www.linkedin.com/in/gehna-goel-3a42521b1/">Check out my Linkedin account!</a></i></b>
+         </div>
+    </div>
+    <br>
+    <br>
+    <div class="cards_">
+        <img src="ig.png" alt="linkedin" style="width:100%">
+        <div class="container">
+            <b><i><a target="_blank" href="https://www.instagram.com/exi.guous/">Check out my Instagram account!</a></i></b>
+        </div>
+     </div>
+    <br>
+    <br>
+    <b><i><a target="_blank" href="https://www.behance.net/gehnagoel">Check out my Behance Account!</a></i></b>
+    </big></big> </center>
 </body>
 </html>
