--- a/index.html
+++ b/index.html
@@ -5,20 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gehna Goel</title>
 </head>
-<body style="background-color:#dbf6e9;">
-    <center><h1>My Portfolio</h1>
-     <a target="_blank" href="https://www.google.com/"> 
-        <img src="gna.jpg" alt="Profile Picture" width="200" height="150"> 
-     </a>
-    <h2> Gehna Goel </h2></center>
-    <hr>
+
+<link type="text/css" rel="stylesheet" href="/main2.css">
+
+
+
+<body>
+   <center>
+<div class="cards">
+     <div class="card">
+        <h1>My Portfolio</h1>
+      </div> 
+      <br>
+    </center>
+    <center>
+      <div class="cards_">
+        <img src="gna.jpg" alt="Avatar" style="width:100%">
+        <div class="container">
+          <h4><b>Gehna Goel</b></h4>
+          <p>UI/UX Desginer</p>
+        </div>
+      </div>
+     
+    </center>
+
+      <div class="card">
+        <h2> Gehna Goel </h2>
+      </div>
+  <hr>
     <p>I am a second year Interaction Design student studying at PES University, Bangalore, India. My birthday is on March 8<sup>th</sup>. </p>
     <h3>My Hobbies are:</h3>
     <ol>
       <li>Reading</li>
       <li>Cooking</li>
     </ol>
-    <h3>Education</h3>
+    <h3 id="first">Education</h3>
     <ul>
       <li>Primus Public School</li>
       <li>PES University</li>
@@ -43,18 +64,20 @@
       </tbody>
     </table>
     <br>
-    <big><big><b><i><a target="_blank" href="contact_me.html">Contact me</a></i></b></big></big>
     <hr>
-    <iframe src="https://scratch.mit.edu/projects/476723405/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <center> 
+    <big><big><b><i><a target="_blank" href="contact_me.html">Contact me</a></i></b></big></big>
+    <br>
+    <br>
+    <big><big><b><i><a target="_blank" href="keysnatch.html">Key Snatch Game</a></i></b></big></big>
     <hr>
     <p>Check out this board game I made!</p>
-    <video width="560" height="315" src="final.mp4" controls autoplay allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">Upshot game</video>
+    <video width="560" height="315" src="video.mp4" controls autoplay>Upshot game</video>
+    <br>
+    <p>My favorite TED Talk</p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/9uOMectkCCs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <br>
   <hr>
-  <center> 
-  <p>PES University</p>
-  <iframe src="https://www.pes.edu/" allowfullscreen="true" width="1300" height="768">PES University</iframe>
 </center>
+</div>
 </body>
 </html>
