--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <br>
     <big><big><b><i><a target="_blank" href="keysnatch.html">Key Snatch Game</a></i></b></big></big>
     <hr>
-    <p>Check out this board game I made!</p>
-    <video width="560" height="315" src="video.mp4" controls autoplay>Upshot game</video>
+    <p>Making the dishwasher more user friendly</p>
+    <video width="560" height="315" src="final.mp4" controls autoplay>Dishwasher</video>
     <br>
     <p>My favorite TED Talk</p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/9uOMectkCCs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
